# pyfolly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _setup.py  build_tests.sh  download.py  find_folly_source.py  liblz4.1.dylib  no_brew_install.sh  prepare_folly.py  pyproject.toml  scratch_install.sh  setup.py  setup_test.py  t.ipynb  test  test.cpp  test_import.py
.github/workflows/: ci.yml
afolly/: ProactorExecutor.cpp  __init__.pxd  executor.pxd  executor.pyx
folly/: README.md  build_mode.cpp
folly/python/test/: setup.py
insertions/: README.md  t.py
insertions/folly/python/: __init__.py  build_mode.pyi  build_mode.pyx
insertions/folly/python/test/: simplebridge.pyx
patches/: README.md
patches/python/test/: setup.py  simplebridge.pyx  simplebridge.pyx.patch  simplebridgecoro.pyx.patch  simplegenerator.pyx.patch
replacements/: README.md
test/: IOBufTestUtils.cpp  iobuf_helper.cpp  iobuf_helper.pxd  setup.py  simplebridge.cpp  simplebridge.pyx  simplebridgecoro.cpp  simplebridgecoro.pyx  simplegenerator.cpp  simplegenerator.pyx  test_set_executor_cython.cpp  test_set_executor_cython.pyx
