[project]
name = "folly"
version = "0.1.0"
description = ""
authors = [
  { name = "ae", email = "85891169+novitae@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["setuptools", "cython", "pathlib", "requests"]
build-backend = "setuptools.build_meta"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ipykernel = "^6.29.5"


[tool.poetry.group.build.dependencies]
pathlib = "^1.0.1"
requests = "^2.32.3"
cython = "^3.0.12"
setuptools = "^75.8.0"

[tool.pytest.ini_options]
addopts = '--ignore=folly/python/test/setup.py --ignore-glob=folly-source-*'
python_files = ["folly/python/test/*.py"]