[project]
name = "folly"
version = "0.1.0"
description = ""
authors = [
  { name = "ae", email = "85891169+novitae@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build",
  "cmake>=3.15",
  "ninja",  # optional but recommended
  "cython"
]
build-backend = "setuptools.build_meta"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ipykernel = "^6.29.5"


[tool.poetry.group.build.dependencies]
setuptools = ">=42"
wheel = "^0.45.1"
scikit-build = "^0.18.1"
cmake = ">=3.15"
cython = "^3.0.12"
ninja = "^1.11.1.3"

[tool.pytest.ini_options]
addopts = '--ignore=folly/python/test/setup.py --ignore-glob=folly-source-* --ignore=insertions'
python_files = ["folly/python/test/*.py"]