[project]
name = "folly"
version = "0.1.0"
description = ""
authors = [
  { name = "ae", email = "85891169+novitae@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ipykernel = "^6.29.5"

[tool.poetry.group.build.dependencies]
cython = "^3.0.12"
setuptools = "^75.8.0"
pathlib = "^1.0.1"

[tool.pytest.ini_options]
testpaths = ["folly/python/test"]
python_files = ["*.py"]
addopts = "--ignore-glob=**/setup.py"
